# conversations

./: .gitignore  403.html  404.html  CNAME  README.md  cabal.project  cabal.project.freeze  conversations.cabal  feed.xml  index.html
2/: index.html
3/: index.html
assets/: erudite.css
css/: erudite.css
error/: 403.html.md  404.html.md
posts/: 2013-08-05-digital-foxes.html.md  2013-08-15-introduction-to-automatic-differentiation.html.pmd  2013-08-22-cleverness-of-compilers.html.md  2013-08-22-cleverness-of-compilers.html.md.erb  2013-10-10-cleverness-of-compilers-2-how.html.md  2013-10-19-taking-css-to-the-next-level.html.pmd  2013-10-31-consider-the-cheeseburger.html.md  2014-01-18-testing-revisited.html.md  2014-03-29-hard-work-and-success.html.md  2014-05-13-stochasticity-is-a-quantifier.html.pmd  2014-07-26-social-function-of-module-systems.html.md  2015-02-15-how-to-compute-with-a-probability-distribution.html.md  2015-05-23-best-effort-vs-strictly-safe.html.pmd  2015-06-21-on-good-software.html.md  2016-03-20-on-intentionally-random-programs.html.pmd  2016-03-21-probabilistic-programming-habits.html.md  2016-04-29-on-testing-probabilistic-programs.html.pmd  2016-07-03-what-is-a-sampler?.html.pmd  2017-08-07-musings-on-prob-prog.html.md  2017-11-19-compositional-statistical-unit-testing.html.md  2017-12-25-inference-by-quadrature.html.pmd  2018-12-23-statistical-testing-3.html.md  2019-01-26-finitary-finiversalist-church.html.pmd  2019-03-09-computational-murk.html.md  2020-07-30-yak-shaving.html.pmd  2020-08-08-on-organizing.html.pmd  (+3 more)
src/: Context.hs  (+5 more)
(+38 files in other folders)
